--- a/css/variants/default-monospaced.css
+++ b/css/variants/default-monospaced.css
@@ -430,6 +430,40 @@
   .chzn-container-active .chzn-choices .search-field input {
     color: #f0d9ed !important; }
 
+  .filter_select.default_style.disabled {
+    background: #4d394b; }
+    .filter_select.default_style.disabled input.fsl_input {
+      background: #876484; }
+  .filter_select.default_style .fsl_input_container {
+    border: 1px solid #372c36; }
+    .filter_select.default_style .fsl_input_container.active, .filter_select.default_style .fsl_input_container:hover {
+      border-color: #4d394b; }
+    .filter_select.default_style .fsl_input_container.active {
+      box-shadow: 0 0 7px rgba(62, 49, 60, 0.15); }
+  .filter_select.default_style .fsl_list_container {
+    background: #3e313c;
+    border: 1px solid #372c36;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5); }
+  .filter_select.default_style .fsl_list .fsl_item.selected {
+    color: #f0d9ed; }
+  .filter_select.default_style .fsl_list .fsl_item.disabled {
+    color: #f0d9ed; }
+  .filter_select.default_style .fsl_list .fsl_item.active {
+    background-color: #876484;
+    border-color: #4d394b;
+    color: #f0d9ed; }
+  .filter_select.default_style .fsl_token {
+    background: #3e313c;
+    border: 1px solid #372c36;
+    color: #f0d9ed; }
+    .filter_select.default_style .fsl_token:after {
+      color: #f0d9ed; }
+  .filter_select.default_style .fsl_paginate .fsl_paginate_back,
+  .filter_select.default_style .fsl_paginate_forward {
+    color: #f0d9ed; }
+  .filter_select.default_style.single .fsl_input_container.active:after, .filter_select.default_style.single .fsl_input_container:hover:after {
+    color: #f0d9ed; }
+
   #message-input.offline {
     background-color: #4d394b !important; }
   #message-input.disabled {
@@ -493,77 +527,75 @@
   #special_formatting_text {
     color: #a3839f; }
 
-  #menu,
+  .menu,
   .menu_example {
     background: #372c36;
     border: 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     color: #f0d9ed; }
-
-  #menu .section_header .header_label,
-  .menu_example .section_header .header_label {
-    background-color: #3e313c;
-    color: #a3839f; }
-
-  #menu .section_header > div.header_label_container,
-  .menu_example .section_header > div.header_label_container {
-    color: #a3839f; }
-
-  #menu_header .menu_simple_header {
-    background: #372c36;
-    border-color: #4d394b;
-    color: #f0d9ed; }
-    #menu_header .menu_simple_header a {
+    .menu ul li a,
+    .menu_example ul li a {
+      background: #3e313c;
+      border-bottom: 0;
       color: #a3839f; }
-      #menu_header .menu_simple_header a:hover {
-        color: #d4bbd1; }
-  #menu_header .menu_close {
+    .menu .section_header .header_label,
+    .menu_example .section_header .header_label {
+      background-color: #3e313c;
+      color: #a3839f; }
+    .menu .section_header > div.header_label_container,
+    .menu_example .section_header > div.header_label_container {
+      color: #a3839f; }
+
+  .menu {
+    background: #372c36;
     color: #f0d9ed; }
-
-  #menu ul li a,
-  .menu_example ul li a {
-    background: #3e313c;
-    border-bottom: 0;
-    color: #a3839f; }
-
-  #menu ul li.highlighted a {
-    background: #372c36;
-    border-bottom-color: #3e313c;
-    color: #d4bbd1;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
-    #menu ul li.highlighted a.delete_link {
+    .menu #menu_header .menu_simple_header {
+      background: #372c36;
+      border-color: #4d394b;
+      color: #f0d9ed; }
+      .menu #menu_header .menu_simple_header a {
+        color: #a3839f; }
+        .menu #menu_header .menu_simple_header a:hover {
+          color: #d4bbd1; }
+    .menu #menu_header .menu_close {
+      color: #f0d9ed; }
+    .menu ul li.highlighted a {
+      background: #372c36;
+      border-bottom-color: #3e313c;
+      color: #d4bbd1;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
+      .menu ul li.highlighted a.delete_link {
+        color: #bf360c; }
+    .menu ul li.disabled a {
+      color: #a3839f; }
+    .menu ul li.divider {
+      border-bottom: 2px solid #4a3b49; }
+    .menu ul li.double-divider {
+      border-bottom: 4px solid #4a3b49; }
+    .menu ul li a.delete_link {
       color: #bf360c; }
-  #menu ul li.disabled a {
-    color: #a3839f; }
-  #menu ul li.divider {
-    border-bottom: 2px solid #4a3b49; }
-  #menu ul li.double-divider {
-    border-bottom: 4px solid #4a3b49; }
-  #menu ul li a.delete_link {
-    color: #bf360c; }
-  #menu:not(.keyboard_active) ul li:hover a {
-    background: #372c36;
-    border-bottom-color: #3e313c;
-    color: #d4bbd1;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
-    #menu:not(.keyboard_active) ul li:hover a.delete_link {
-      color: #bf360c; }
-  #menu input {
-    background: #372c36;
-    border: 1px solid #372c36; }
-  #menu textarea {
-    background: #372c36;
-    border: 1px solid #372c36; }
+    .menu:not(.keyboard_active) ul li:hover a {
+      background: #372c36;
+      border-bottom-color: #3e313c;
+      color: #d4bbd1;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
+      .menu:not(.keyboard_active) ul li:hover a.delete_link {
+        color: #bf360c; }
+    .menu input {
+      background: #372c36;
+      border: 1px solid #372c36; }
+    .menu textarea {
+      background: #372c36;
+      border: 1px solid #372c36; }
+    .menu #menu_footer .menu_footer {
+      background: #372c36;
+      border-top: 1px solid #4d394b; }
 
   .menu_example ul li.highlighted a, .menu_example:not(.keyboard_active) ul li:hover a {
     background: #372c36;
     border-bottom-color: #3e313c;
     color: #d4bbd1;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
-
-  #menu_footer .menu_footer {
-    background: #372c36;
-    border-top: 1px solid #4d394b; }
 
   #team_menu {
     background: #4d394b;
@@ -771,6 +803,32 @@
     border: #61485e; }
   .highlighter_underlay .ghost_text {
     color: #f0d9ed; }
+
+  #chat_input_tab_ui {
+    background: #3e313c;
+    border: 1px solid #4d394b;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.5); }
+    #chat_input_tab_ui #chat_input_tab_ui_header {
+      background: padding-box #372c36;
+      border-bottom: 1px solid #4d394b;
+      color: #f0d9ed;
+      text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+    #chat_input_tab_ui ul li.chat_input_tab_item {
+      border-bottom: 1px solid #4d394b; }
+      #chat_input_tab_ui ul li.chat_input_tab_item.active, #chat_input_tab_ui ul li.chat_input_tab_item:hover {
+        background: #61485e;
+        border-bottom-color: #4d394b;
+        color: #f0d9ed;
+        text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
+        #chat_input_tab_ui ul li.chat_input_tab_item.active span, #chat_input_tab_ui ul li.chat_input_tab_item:hover span {
+          color: #f0d9ed !important; }
+    #chat_input_tab_ui ul.type_emoji li {
+      color: #f0d9ed; }
+    #chat_input_tab_ui ul.type_members .broadcast_info,
+    #chat_input_tab_ui ul.type_members .realname {
+      color: #a3839f; }
+    #chat_input_tab_ui ul.type_channels .not_in_channel {
+      color: #a3839f; }
 
   .tab_complete_ui {
     background: #3e313c;
@@ -1335,38 +1393,49 @@
   .delete_attachment_link:hover {
     color: #d4bbd1; }
 
-  .file_container:after {
-    background-image: -webkit-linear-gradient(top, rgba(55, 44, 54, 0) 0, #372c36 100%);
-    background-image: -moz-linear-gradient(top, rgba(55, 44, 54, 0) 0, #372c36 100%);
-    background-image: -o-linear-gradient(top, rgba(55, 44, 54, 0) 0, #372c36 100%);
-    background-image: linear-gradient(top, rgba(55, 44, 54, 0) 0, #372c36 100%); }
-  .file_container .file_header .file_header_meta {
-    color: #a3839f; }
-  .file_container .file_header + .file_body {
-    border-top: 1px solid #372c36; }
-  .file_container .preview_actions .btn {
-    background-color: #4d394b; }
-    .file_container .preview_actions .btn:after {
-      border-color: #372c36; }
-    .file_container .preview_actions .btn.preview_show_less_header {
-      background-color: #3e313c;
-      color: #a3839f !important; }
-      .file_container .preview_actions .btn.preview_show_less_header:after {
-        border: 2px solid #372c36; }
-      .file_container .preview_actions .btn.preview_show_less_header:focus, .file_container .preview_actions .btn.preview_show_less_header:hover {
-        background-color: #4d394b; }
-        .file_container .preview_actions .btn.preview_show_less_header:focus:after, .file_container .preview_actions .btn.preview_show_less_header:hover:after {
-          border-color: #4d394b; }
-  .file_container.image_container .preview_actions .btn {
-    background-color: rgba(135, 100, 132, 0.9); }
-    .file_container.image_container .preview_actions .btn:focus, .file_container.image_container .preview_actions .btn:hover {
+  .file_container {
+    border: 1px solid #372c36;
+    color: #f0d9ed; }
+    .file_container:after, .file_container.post_container:after {
+      background-image: -webkit-linear-gradient(top, rgba(62, 49, 60, 0) 0, #3e313c 100%);
+      background-image: -moz-linear-gradient(top, rgba(62, 49, 60, 0) 0, #3e313c 100%);
+      background-image: -o-linear-gradient(top, rgba(62, 49, 60, 0) 0, #3e313c 100%);
+      background-image: linear-gradient(top, rgba(62, 49, 60, 0) 0, #3e313c 100%); }
+    .file_container.generic_container .file_header_icon .ts_icon {
+      background: #3e313c;
+      box-shadow: 0 0 0 3px #3e313c;
+      color: #f0d9ed; }
+      .file_container.generic_container .file_header_icon .ts_icon.snippet {
+        background: #4d394b; }
+    .file_container.generic_container .file_header_meta .meta_hover {
+      background: #3e313c; }
+    .file_container .file_header .file_header_meta {
+      color: #a3839f; }
+    .file_container .file_header + .file_body {
+      border-top: 1px solid #372c36; }
+    .file_container .preview_actions .btn {
       background-color: #4d394b; }
-  .file_container.image_container .preview_actions.overflow_preview_actions {
-    background: rgba(135, 100, 132, 0.9);
-    border: 1px solid rgba(55, 44, 54, 0.1); }
-  .file_container .preview_show .preview_show_btn {
-    background: linear-gradient(rgba(55, 44, 54, 0.8), rgba(55, 44, 54, 0.8)), linear-gradient(rgba(135, 100, 132, 0.3), rgba(135, 100, 132, 0.3));
-    color: #a3839f; }
+      .file_container .preview_actions .btn:after {
+        border-color: #372c36; }
+      .file_container .preview_actions .btn.preview_show_less_header {
+        background-color: rgba(135, 100, 132, 0.9);
+        color: #f0d9ed !important; }
+        .file_container .preview_actions .btn.preview_show_less_header:after {
+          border: 2px solid #372c36; }
+        .file_container .preview_actions .btn.preview_show_less_header:focus, .file_container .preview_actions .btn.preview_show_less_header:hover {
+          background-color: #4d394b; }
+          .file_container .preview_actions .btn.preview_show_less_header:focus:after, .file_container .preview_actions .btn.preview_show_less_header:hover:after {
+            border-color: #4d394b; }
+    .file_container.image_container .preview_actions .btn {
+      background-color: rgba(135, 100, 132, 0.9); }
+      .file_container.image_container .preview_actions .btn:focus, .file_container.image_container .preview_actions .btn:hover {
+        background-color: #4d394b; }
+    .file_container.image_container .preview_actions.overflow_preview_actions {
+      background: rgba(135, 100, 132, 0.9);
+      border: 1px solid rgba(55, 44, 54, 0.1); }
+    .file_container .preview_show .preview_show_btn {
+      background: linear-gradient(rgba(55, 44, 54, 0.8), rgba(55, 44, 54, 0.8)), linear-gradient(rgba(135, 100, 132, 0.3), rgba(135, 100, 132, 0.3));
+      color: #a3839f; }
 
   .msg_inline_video_buttons_div {
     background-color: rgba(62, 49, 60, 0.4); }
@@ -1827,9 +1896,10 @@
   .search_result_with_extract:hover .extract_expand_icons {
     color: #d4bbd1; }
 
-  .member_mentions_options {
+  #mentions_options {
     background-color: #3e313c;
-    border-top: 1px solid #372c36; }
+    border-top: 1px solid #372c36;
+    color: #f0d9ed; }
 
   #member_mentions_more_btn {
     background-color: #876484 !important; }
@@ -2020,6 +2090,23 @@
   #flex_contents .edit_comment_form textarea {
     color: #f0d9ed; }
 
+  .tab_container .star_item .message .actions .btn_icon,
+  .tab_container .star_item .message .actions .star_jump,
+  .tab_container .file_list_item .actions .btn_icon,
+  .tab_container .file_list_item .actions .star_jump,
+  .tab_container .file_comment_item .actions .btn_icon,
+  .tab_container .file_comment_item .actions .star_jump {
+    background-color: #3e313c; }
+  .tab_container .star_item .message .actions .btn:after,
+  .tab_container .file_list_item .actions .btn:after,
+  .tab_container .file_comment_item .actions .btn:after {
+    border-color: #4d394b; }
+  .tab_container .star_item .message .timestamp {
+    color: #a3839f; }
+  .tab_container .file_list_item:focus, .tab_container .file_list_item:hover {
+    background-color: #4d394b;
+    border-color: #372c36; }
+
   .team_list_item {
     border-top: 1px solid #61485e;
     color: #f0d9ed; }
@@ -2108,8 +2195,14 @@
       background: #d4bbd1; }
     #emoji_menu #emoji_div_default_rxns {
       border-bottom: 1px solid #4d394b; }
+    #emoji_menu #emoji_preview_text {
+      background: #372c36;
+      color: #f0d9ed; }
     #emoji_menu #emoji_preview_deluxe {
       color: #f0d9ed; }
+    #emoji_menu #emoji_menu_footer {
+      background: #372c36;
+      border-top: 1px solid #4d394b; }
     #emoji_menu.all_emoji #emoji_menu_header {
       background: #372c36; }
     #emoji_menu.all_emoji .emoji_li a.green:hover, #emoji_menu.all_emoji .emoji_li.key_selection a.green {
@@ -2129,17 +2222,8 @@
         background: #61485e;
         border-bottom: 3px solid #4a3b49;
         color: #f0d9ed; }
-
-  #emoji_preview_text {
-    background: #372c36;
-    color: #f0d9ed; }
-
-  #emoji_menu_footer {
-    background: #372c36;
-    border-top: 1px solid #4d394b; }
-
-  #monkey_scroll_wrapper_for_emoji_menu_items_scroller {
-    background: #3e313c; }
+    #emoji_menu #monkey_scroll_wrapper_for_emoji_menu_items_scroller {
+      background: #3e313c; }
 
   #emoji_menu_header {
     background: #372c36; }
@@ -2325,6 +2409,9 @@
     color: #a3839f; }
   #omnibox #omnibox_help {
     color: #f0d9ed; }
+
+  #share_dialog .file_list_item {
+    border-color: #372c36; }
 
   .ts_tip .ts_tip_multiline_inner, .ts_tip:not(.ts_tip_multiline) .ts_tip_tip {
     background: #61485e; }
@@ -2873,7 +2960,7 @@
 
   .admin_list_item:hover,
   .plan_availability,
-  #monkey_scroll_wrapper_for_menu_items_scroller,
+  .menu #monkey_scroll_wrapper_for_menu_items_scroller,
   .modal-backdrop,
   .icon {
     background: #3e313c; }
@@ -2882,7 +2969,6 @@
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #372c36 65%);
     bottom: 0;
     height: 480px;
-    margin-left: -2rem;
     position: absolute;
     width: 100%; }
 
