Added styles for filter selection input

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 
   @import "modules/inputs/base";
   @import "modules/inputs/chzn";
+  @import "modules/inputs/filter-select";
   @import "modules/inputs/messaging";
 
   @import "modules/menu/base";
