Added styles for share modals

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,7 @@
   @import "modules/modals/preferences";
   @import "modules/modals/invite";
   @import "modules/modals/omnibox";
+  @import "modules/modals/share";
 
   @import "modules/tooltips/base";
   @import "modules/tooltips/coachmarks";
