--- a/scss/modules/flexpane/_mentions.scss
+++ b/scss/modules/flexpane/_mentions.scss
@@ -1,6 +1,7 @@
-.member_mentions_options {
+#mentions_options {
   background-color: $color-base;
   border-top: 1px solid $color-shade-darkest;
+  color: $base-font-color;
 }
 
 #member_mentions_more_btn {
