Fixes member preview background

--- a/css/variants/midnight-blue-monospaced.css
+++ b/css/variants/midnight-blue-monospaced.css
@@ -2115,6 +2115,11 @@
     .team_list_item .member_name {
       color: #00B9F2; }
 
+  #member_preview_scroller,
+  #member_preview_web_container,
+  .menu_member_header {
+    background-color: #000; }
+
   #member_preview_scroller a:not(.member_name),
   .team_list_item a:not(.member_name) {
     color: #00B9F2; }
