--- a/css/default.css
+++ b/css/default.css
@@ -2112,6 +2112,11 @@
     .team_list_item .member_name {
       color: #f0d9ed; }
 
+  #member_preview_scroller,
+  #member_preview_web_container,
+  .menu_member_header {
+    background-color: #3e313c; }
+
   #member_preview_scroller a:not(.member_name),
   .team_list_item a:not(.member_name) {
     color: #f0d9ed; }
