--- a/css/variants/black.css
+++ b/css/variants/black.css
@@ -2112,6 +2112,11 @@
     .team_list_item .member_name {
       color: #e6e6e6; }
 
+  #member_preview_scroller,
+  #member_preview_web_container,
+  .menu_member_header {
+    background-color: #222; }
+
   #member_preview_scroller a:not(.member_name),
   .team_list_item a:not(.member_name) {
     color: #e6e6e6; }
