Added styles for what's new burst

--- a/scss/modules/header/_base.scss
+++ b/scss/modules/header/_base.scss
@@ -168,3 +168,8 @@
   background: $color-shade-lightest;
   border: 1px solid $color-shadow-light;
 }
+
+#whats_new_burst {
+  background: $color-red;
+  border-color: $color-shade-light;
+}
