Added styles for info buttons

--- a/scss/modules/inputs/_base.scss
+++ b/scss/modules/inputs/_base.scss
@@ -229,6 +229,10 @@ textarea {
   }
 }
 
+.btn_info {
+  background: $color-shade-light !important;
+}
+
 .btn_outline {
   background: $color-base;
   color: $base-font-color !important;
