Improved styling on filter select tokens

--- a/scss/modules/inputs/_filter-select.scss
+++ b/scss/modules/inputs/_filter-select.scss
@@ -36,7 +36,7 @@
     }
 
     &.active {
-      background-color: $color-shade-lightest;
+      background-color: $color-shade-darkest;
       border-color: $color-shade-dark;
       color: $base-font-color;
     }
