--- a/scss/modules/messaging/_attachments.scss
+++ b/scss/modules/messaging/_attachments.scss
@@ -144,6 +144,7 @@
 }
 
 .file_container {
+  background: $color-shade-darkest;
   border: 1px solid $color-shade-darkest;
   color: $base-font-color;
 
@@ -167,7 +168,8 @@
     }
 
     .file_header_meta .meta_hover {
-      background: $color-base;
+      background: $color-shade-darkest;
+      color: $base-font-color;
     }
   }
 
