--- a/scss/modules/messaging/_base.scss
+++ b/scss/modules/messaging/_base.scss
@@ -6,8 +6,8 @@ body:not(.feature_new_message_markup) {
   .message {
     .mention,
     &.highlight {
-      background: $color-shade-light;
-      border: 1px solid $color-shade-lightest;
+      background: transparent;
+      border: 0;
       border-radius: 3px;
       padding: 2px;
     }
