--- a/scss/modules/modals/_preferences.scss
+++ b/scss/modules/modals/_preferences.scss
@@ -30,3 +30,13 @@
 #debug_prefs_dialog {
   background: $color-shade-mid;
 }
+
+#prefs_themes .monkey_scroller:before {
+  background: $color-red;
+  border-radius: 3px;
+  content: "Light sidebar themes (e.g. Hoth) will break this Stylish theme.";
+  display: block;
+  margin-bottom: 6px;
+  padding: 2px 4px 4px;
+  width: 100%;
+}
